Fixing some spacing and size issues.  Still need to deal with short DT problem.

--- a/dev/www/myWidget.css
+++ b/dev/www/myWidget.css
@@ -32,7 +32,7 @@
     overflow: auto;
     padding: 5px 10px;
     position: relative;
-    height: 90%;  /* This is annoying.  Someone smarter than me please fix.  :) */
+    height: 100%;
 }
 
 .chart-shim {
